# secrez-rust

./: .gitignore  Cargo.toml  README.md  reset.sh
src/: bash.rs  crypt.rs  data.rs  main.rs
