[package]
name = "secrez-rust"
version = "0.1.0"
authors = ["Francesco Sullo <francesco@sullo.co>"]
edition = "2018"

[dependencies]
rand = "0.7"
rust-crypto = "^0.2"
rpassword = "4.0"
dirs = "2.0"
rustyline = "5.0.1"
colored = "1.8.0"
hex-literal = "0.2.0"
block-modes = "0.3.3"
aes-soft = "0.3.3"
hex = "0.3.2"
openssl-sys = "0.9"
openssl = "0.10"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.0"
rustc-serialize = "0.3.24"
aes = "0.3.2"
